--- a/PersonalFinanceExpenses/PFE.Web/PFE.Web.csproj
+++ b/PersonalFinanceExpenses/PFE.Web/PFE.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	   <PackageReference Include="Microsoft.AspNetCore.App" />	  
 	  <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
@@ -27,11 +28,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\" />
-    <Folder Include="Data\" />
+	   <None Include="Views\LogIn\About.cshtml" />
+    <None Include="Views\LogIn\Contact.cshtml" />
+    <None Include="Views\LogIn\Index.cshtml" />
+    
   </ItemGroup>
 
 </Project>
