--- a/PersonalFinanceExpenses/PFE.Web/PFE.Web.csproj
+++ b/PersonalFinanceExpenses/PFE.Web/PFE.Web.csproj
@@ -32,6 +32,7 @@
 	   <None Include="Views\LogIn\About.cshtml" />
     <None Include="Views\LogIn\Contact.cshtml" />
     <None Include="Views\LogIn\Index.cshtml" />
+    <None Include="wwwroot\admin\img\asd.png" />
     
   </ItemGroup>
 
