--- a/PersonalFinanceExpenses/PFE.Web/appsettings.json
+++ b/PersonalFinanceExpenses/PFE.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=PFE;User ID=demo;Password=123456;"
+    "DefaultConnection": "Server=.;Database=PFE;Trusted_Connection=True;"
+    // "DefaultConnection": "Server=mukdo.database.windows.net,1433;Database=PFE;User ID=mukdo;;Password=Password@2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
